feat: analytic request, docs
