# app/Http/Controllers/CampaignMetricsController.php
@@ -3,11 +3,25 @@
 namespace App\Http\Controllers;
 
 use App\Http\Requests\CampaignMetricsRequest;
+use App\Http\Requests\DateRangeRequest;
 use App\Models\CampaignMetrics;
+use App\Services\MetricService;
+use Illuminate\Http\JsonResponse;
 use Symfony\Component\HttpFoundation\Response;
 
+/**
+ * @OA\Tag(
+ *     name="Campaign Metrics",
+ *     description="Operations related to campaign metrics"
+ * )
+ */
 class CampaignMetricsController extends Controller
 {
+    protected MetricService $metric_service;
+    public function __construct(MetricService $metricService)
+    {
+        $this->metric_service = $metricService;
+    }
     /**
      * @OA\Post(
      *     path="/api/campaign-metrics",
@@ -42,10 +56,47 @@ class CampaignMetricsController extends Controller
      *     )
      * )
      */
-    public function store(CampaignMetricsRequest $request): \Illuminate\Http\JsonResponse
+    public function store(CampaignMetricsRequest $request): JsonResponse
     {
         $campaign = CampaignMetrics::query()->create($request->validated());
 
         return response()->json($campaign, Response::HTTP_CREATED);
+    }
+
+    /**
+     * @OA\Post(
+     *     path="/api/campaign-metrics/all",
+     *     summary="Retrieve all campaign metrics within a date range",
+     *     description="Retrieve all metrics for campaigns, optionally filtered by a start and end date.",
+     *     operationId="getAllCampaignMetrics",
+     *     tags={"Campaign Metrics"},
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(ref="#/components/schemas/DateRangeRequest")
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="All campaign metrics retrieved successfully",
+     *         @OA\JsonContent(
+     *             type="array",
+     *             @OA\Items(ref="#/components/schemas/CampaignMetrics")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=400,
+     *         description="Invalid date range",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="message", type="string", example="Invalid date range provided.")
+     *         )
+     *     )
+     * )
+     */
+    public function getAllCampaignMetrics(DateRangeRequest $request): JsonResponse
+    {
+        $start = $request->input('start_date', false);
+        $end = $request->input('end_date', false);
+        $metrics = $this->metric_service->getAllCampaignMetrics($start, $end);
+
+        return response()->json($metrics, Response::HTTP_OK);
     }
 }
