# routes/api.php
@@ -13,9 +13,18 @@ Route::group(['middleware' => 'auth:sanctum'], function () {
     Route::get('user', function (Request $request) {
         return $request->user();
     });
-    Route::apiResource('campaigns', CampaignController::class);
-    Route::get('campaigns/{campaign}/metrics', [CampaignController::class, 'metrics'])
-        ->name('campaign.metrics');
+
+    Route::prefix('campaigns')->group(function () {
+        Route::apiResource('', CampaignController::class);
+        Route::get('{id}/metrics', [CampaignController::class, 'metrics'])
+            ->name('campaign.metrics');
+    });
+
+    Route::prefix('campaign-metrics')->group(function () {
+        Route::get('analytics', [CampaignMetricsController::class, 'getAllCampaignMetrics'])
+            ->name('campaign-metrics.analytics');
+        Route::post('', [CampaignMetricsController::class, 'store']);
+    });
 });
 
-Route::post('campaign-metrics', [CampaignMetricsController::class, 'store']);
+
